Refactored enums and added initial AGV interface file
Co-authored-by: @EngrAbodeh